--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
   <artifactId>sloccount</artifactId>
   <packaging>hpi</packaging>
   <name>Jenkins SLOCCount Plug-in</name>
-  <version>1.5-SNAPSHOT</version>
+  <version>1.5</version>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/SLOCCount+Plugin</url>
   <description>This plug-in generates the trend report for SLOCCount,
     an open source program which counts the number of lines of codes in over
@@ -37,4 +37,10 @@
       <version>1.0.0</version>
     </dependency>
   </dependencies>
+
+  <scm>
+    <connection>scm:svn:https://svn.jenkins-ci.org/tags/sloccount-1.5</connection>
+    <developerConnection>scm:svn:https://svn.jenkins-ci.org/tags/sloccount-1.5</developerConnection>
+    <url>http://fisheye.jenkins-ci.org/browse/Hudson/tags/sloccount-1.5</url>
+  </scm>
 </project>
