Make pom.xml git-friendly

--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.jvnet.hudson.plugins</groupId>
+    <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.377</version>
-    <relativePath>../pom.xml</relativePath>
+    <version>1.429</version>
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -28,8 +27,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.jvnet.hudson.main</groupId>
+      <groupId>org.jenkins-ci.main</groupId>
       <artifactId>maven-plugin</artifactId>
+      <version>1.429</version>
     </dependency>
     <dependency>
       <groupId>findbugs</groupId>
@@ -37,4 +37,23 @@
       <version>1.0.0</version>
     </dependency>
   </dependencies>
+
+  <repositories>
+    <repository>
+      <id>m.g.o-public</id>
+      <url>http://maven.glassfish.org/content/groups/public/</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>m.g.o-public</id>
+      <url>http://maven.glassfish.org/content/groups/public/</url>
+    </pluginRepository>
+  </pluginRepositories>
+
+  <scm>
+    <connection>scm:git:git://github.com/jenkinsci/sloccount-plugin.git</connection>
+    <developerConnection>scm:git:git@github.com:jenkinsci/sloccount-plugin.git</developerConnection>
+    <url>https://github.com/jenkinsci/sloccount-plugin</url>
+  </scm>
 </project>
