--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.jenkins-ci.plugins</groupId>
+    <groupId>org.jvnet.hudson.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.429</version>
+    <version>1.377</version>
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -27,9 +27,8 @@
 
   <dependencies>
     <dependency>
-      <groupId>org.jenkins-ci.main</groupId>
+      <groupId>org.jvnet.hudson.main</groupId>
       <artifactId>maven-plugin</artifactId>
-      <version>1.429</version>
     </dependency>
     <dependency>
       <groupId>findbugs</groupId>
