--- a/pom.xml
+++ b/pom.xml
@@ -2,9 +2,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.jvnet.hudson.plugins</groupId>
+    <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.377</version>
+    <version>1.447</version>
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -32,11 +32,21 @@
       <name>Jesse Farinacci</name>
       <email>jieryn@gmail.com</email>
     </developer>
+    <developer>
+      <id>ssogabe</id>
+      <name>Seiji Sogabe</name>
+      <email>s.sogabe@gmail.com</email>
+    </developer>      
   </developers>
 
+
+  <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  
   <dependencies>
     <dependency>
-      <groupId>org.jvnet.hudson.main</groupId>
+      <groupId>org.jenkins-ci.main</groupId>
       <artifactId>maven-plugin</artifactId>
     </dependency>
     <dependency>
