--- a/pom.xml
+++ b/pom.xml
@@ -54,15 +54,7 @@
   </properties>
   
   <dependencies>
-    <dependency>
-      <groupId>org.jenkins-ci.main</groupId>
-      <artifactId>maven-plugin</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>findbugs</groupId>
-      <artifactId>annotations</artifactId>
-      <version>1.0.0</version>
-    </dependency>
+    <!-- None -->
   </dependencies>
 
   <repositories>
