--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>sloccount</artifactId>
   <packaging>hpi</packaging>
   <name>Jenkins SLOCCount Plug-in</name>
-  <version>1.11-SNAPSHOT</version>
+  <version>1.11</version>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/SLOCCount+Plugin</url>
   <description>This plug-in generates the trend report for SLOCCount,
     an open source program which counts the number of lines of codes in over
