--- a/pom.xml
+++ b/pom.xml
@@ -52,9 +52,14 @@
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
-  
+
   <dependencies>
-    <!-- None -->
+    <dependency>
+      <groupId>org.jenkins-ci.plugins</groupId>
+      <artifactId>dashboard-view</artifactId>
+      <version>2.0</version>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
   <repositories>
