--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>1.447</version>
+    <version>2.7</version>
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -55,10 +55,48 @@
 
   <dependencies>
     <dependency>
+     <groupId>org.jenkins-ci.main</groupId>
+     <artifactId>jenkins-core</artifactId>
+     <version>2.63</version>
+     <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>dashboard-view</artifactId>
       <version>2.0</version>
       <optional>true</optional>
+    </dependency>
+    <!-- dependencies on Jenkins Pipeline plugins -->  
+    <dependency>  
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
+      <artifactId>workflow-job</artifactId>  
+      <version>1.14</version>  
+    </dependency>  
+    <dependency>  
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
+      <artifactId>workflow-cps</artifactId>  
+      <version>2.34</version>  
+    </dependency>  
+    <dependency>  
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
+      <artifactId>workflow-support</artifactId>  
+      <version>2.14</version>  
+    </dependency>  
+    <dependency>  
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
+      <artifactId>workflow-durable-task-step</artifactId>  
+      <version>2.11</version>  
+    </dependency> 
+    <dependency>  
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
+      <artifactId>workflow-step-api</artifactId>  
+      <version>2.11</version>  
+    </dependency>
+    <dependency>  
+        <groupId>org.jenkins-ci.plugins.workflow</groupId>  
+        <artifactId>workflow-basic-steps</artifactId>  
+        <version>2.0</version>  
+        <scope>test</scope>  
     </dependency>
   </dependencies>
 
