--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.7</version>
+    <version>2.30</version>
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -51,22 +51,21 @@
 
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <jenkins.version>1.625.3</jenkins.version>
   </properties>
 
   <dependencies>
-    <dependency>
-     <groupId>org.jenkins-ci.main</groupId>
-     <artifactId>jenkins-core</artifactId>
-     <version>2.63</version>
-     <scope>provided</scope>
-    </dependency>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>dashboard-view</artifactId>
       <version>2.0</version>
       <optional>true</optional>
     </dependency>
-    <!-- dependencies on Jenkins Pipeline plugins -->  
+    <dependency>  
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
+      <artifactId>workflow-step-api</artifactId>  
+      <version>2.6</version>  
+    </dependency>
     <dependency>  
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-job</artifactId>  
@@ -75,22 +74,15 @@
     <dependency>  
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-cps</artifactId>  
-      <version>2.34</version>  
+      <version>1.14</version>  
     </dependency>  
+
+    <!-- dependencies on Jenkins Pipeline plugins for tests-->  
     <dependency>  
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-support</artifactId>  
-      <version>2.14</version>  
-    </dependency>  
-    <dependency>  
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
-      <artifactId>workflow-durable-task-step</artifactId>  
-      <version>2.11</version>  
-    </dependency> 
-    <dependency>  
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
-      <artifactId>workflow-step-api</artifactId>  
-      <version>2.11</version>  
+      <version>1.14</version>
+      <scope>test</scope>  
     </dependency>
     <dependency>  
         <groupId>org.jenkins-ci.plugins.workflow</groupId>  
