Changes to address code review
Refer to https://github.com/jenkinsci/sloccount-plugin/pull/49

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <jenkins.version>1.625.3</jenkins.version>
   </properties>
 
   <dependencies>
