--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>2.35</version>
+    <version>3.33</version>
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -49,6 +49,7 @@
   <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <jenkins.version>1.625.3</jenkins.version>
+      <java.level>7</java.level>
   </properties>
 
   <dependencies>
