--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>sloccount</artifactId>
   <packaging>hpi</packaging>
   <name>Jenkins SLOCCount Plug-in</name>
-  <version>1.25-SNAPSHOT</version>
+  <version>${revision}${changelist}</version>
   <url>http://wiki.jenkins-ci.org/display/JENKINS/SLOCCount+Plugin</url>
   <description>This plug-in generates the trend report for SLOCCount,
     an open source program which counts the number of lines of codes in over
@@ -47,6 +47,8 @@
   </contributors>
 
   <properties>
+      <revision>1.25</revision>
+      <changelist>-SNAPSHOT</changelist>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <jenkins.version>1.625.3</jenkins.version>
       <java.level>7</java.level>
@@ -107,7 +109,7 @@
     <connection>scm:git:git://github.com/jenkinsci/sloccount-plugin.git</connection>
     <developerConnection>scm:git:git@github.com:jenkinsci/sloccount-plugin.git</developerConnection>
     <url>https://github.com/jenkinsci/sloccount-plugin</url>
-    <tag>HEAD</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
 </project>
