--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,17 @@
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-cps</artifactId>  
       <version>1.15</version>
-    </dependency>  
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jaxb-api</artifactId>
+      <version>2.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-core</artifactId>
+      <version>2.3.0.1</version>
+    </dependency>
 
     <!-- dependencies on Jenkins Pipeline plugins for tests-->  
     <dependency>  
