--- a/pom.xml
+++ b/pom.xml
@@ -77,14 +77,9 @@
       <version>1.15</version>
     </dependency>
     <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-    <dependency>
-      <groupId>com.sun.xml.bind</groupId>
-      <artifactId>jaxb-core</artifactId>
-      <version>2.3.0.1</version>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>jaxb</artifactId>
+      <version>2.2.11-alpha-1-20190118.085516-2</version>
     </dependency>
 
     <!-- dependencies on Jenkins Pipeline plugins for tests-->  
