--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.33</version>
+    <version>4.40</version>
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -50,45 +50,49 @@
       <revision>1.26</revision>
       <changelist>-SNAPSHOT</changelist>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <jenkins.version>1.625.3</jenkins.version>
-      <java.level>7</java.level>
+      <jenkins.version>2.332.3</jenkins.version>
   </properties>
 
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.jenkins.tools.bom</groupId>
+        <artifactId>bom-2.332.x</artifactId>
+        <version>1370.vfa_e23fe119c3</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>dashboard-view</artifactId>
-      <version>2.0</version>
       <optional>true</optional>
     </dependency>
     <dependency>  
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-step-api</artifactId>  
-      <version>2.6</version>  
     </dependency>
     <dependency>  
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-job</artifactId>  
-      <version>1.14</version>  
-    </dependency>  
+    </dependency>
     <dependency>  
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-cps</artifactId>  
-      <version>1.15</version>
-    </dependency>  
+    </dependency>
 
     <!-- dependencies on Jenkins Pipeline plugins for tests-->  
     <dependency>  
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-support</artifactId>  
-      <version>1.15</version>
-      <scope>test</scope>  
+      <scope>test</scope>
     </dependency>
     <dependency>  
         <groupId>org.jenkins-ci.plugins.workflow</groupId>  
         <artifactId>workflow-basic-steps</artifactId>  
-        <version>2.0</version>  
-        <scope>test</scope>  
+        <scope>test</scope>
     </dependency>
   </dependencies>
 
