--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,11 @@
       <groupId>org.jenkins-ci.plugins.workflow</groupId>  
       <artifactId>workflow-cps</artifactId>  
     </dependency>
+    <dependency>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>jaxb</artifactId>
+      <version>2.3.0.1</version>
+    </dependency>
 
     <!-- dependencies on Jenkins Pipeline plugins for tests-->  
     <dependency>  
