--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,12 @@
+<?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
     <groupId>org.jenkins-ci.plugins</groupId>
     <artifactId>plugin</artifactId>
-    <version>3.33</version>
+    <version>4.40</version>
+    <relativePath />
   </parent>
 
   <groupId>hudson.plugins.sloccount</groupId>
@@ -12,11 +14,8 @@
   <packaging>hpi</packaging>
   <name>Jenkins SLOCCount Plug-in</name>
   <version>${revision}${changelist}</version>
-  <url>http://wiki.jenkins-ci.org/display/JENKINS/SLOCCount+Plugin</url>
-  <description>This plug-in generates the trend report for SLOCCount,
-    an open source program which counts the number of lines of codes in over
-    25 different languages, including C/C++, Ada, COBOL, Fortran, SQL, Ruby,
-    Python, etc... </description>
+  <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
+  <description>This plug-in generates the trend report for SLOCCount, an open source program which counts the number of lines of codes in over 25 different languages, including C/C++, Ada, COBOL, Fortran, SQL, Ruby, Python, etc...</description>
 
   <developers>
     <developer>
@@ -47,48 +46,58 @@
   </contributors>
 
   <properties>
-      <revision>1.26</revision>
-      <changelist>-SNAPSHOT</changelist>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <jenkins.version>1.625.3</jenkins.version>
-      <java.level>7</java.level>
+    <revision>1.26</revision>
+    <changelist>-SNAPSHOT</changelist>
+    <jenkins.version>2.289.3</jenkins.version>
+    <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
   </properties>
+
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>io.jenkins.tools.bom</groupId>
+        <artifactId>bom-2.289.x</artifactId>
+        <version>1409.v7659b_c072f18</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <dependencies>
     <dependency>
       <groupId>org.jenkins-ci.plugins</groupId>
       <artifactId>dashboard-view</artifactId>
-      <version>2.0</version>
       <optional>true</optional>
     </dependency>
-    <dependency>  
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
-      <artifactId>workflow-step-api</artifactId>  
-      <version>2.6</version>  
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-step-api</artifactId>
     </dependency>
-    <dependency>  
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
-      <artifactId>workflow-job</artifactId>  
-      <version>1.14</version>  
-    </dependency>  
-    <dependency>  
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
-      <artifactId>workflow-cps</artifactId>  
-      <version>1.15</version>
-    </dependency>  
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-job</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-cps</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>io.jenkins.plugins</groupId>
+      <artifactId>jaxb</artifactId>
+      <version>2.3.6-1</version>
+    </dependency>
 
-    <!-- dependencies on Jenkins Pipeline plugins for tests-->  
-    <dependency>  
-      <groupId>org.jenkins-ci.plugins.workflow</groupId>  
-      <artifactId>workflow-support</artifactId>  
-      <version>1.15</version>
-      <scope>test</scope>  
+    <!-- dependencies on Jenkins Pipeline plugins for tests-->
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-support</artifactId>
+      <scope>test</scope>
     </dependency>
-    <dependency>  
-        <groupId>org.jenkins-ci.plugins.workflow</groupId>  
-        <artifactId>workflow-basic-steps</artifactId>  
-        <version>2.0</version>  
-        <scope>test</scope>  
+    <dependency>
+      <groupId>org.jenkins-ci.plugins.workflow</groupId>
+      <artifactId>workflow-basic-steps</artifactId>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
@@ -106,10 +115,10 @@
   </pluginRepositories>
 
   <scm>
-    <connection>scm:git:git://github.com/jenkinsci/sloccount-plugin.git</connection>
-    <developerConnection>scm:git:git@github.com:jenkinsci/sloccount-plugin.git</developerConnection>
-    <url>https://github.com/jenkinsci/sloccount-plugin</url>
-    <tag>{scmTag}</tag>
+    <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
+    <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
+    <url>https://github.com/${gitHubRepo}</url>
+    <tag>${scmTag}</tag>
   </scm>
 
 </project>
