--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
   <artifactId>sloccount</artifactId>
   <packaging>hpi</packaging>
   <name>Jenkins SLOCCount Plug-in</name>
-  <version>1.26</version>
+  <version>${revision}${changelist}</version>
   <url>https://github.com/jenkinsci/${project.artifactId}-plugin</url>
   <description>This plug-in generates the trend report for SLOCCount, an open source program which counts the number of lines of codes in over 25 different languages, including C/C++, Ada, COBOL, Fortran, SQL, Ruby, Python, etc...</description>
 
@@ -46,7 +46,7 @@
   </contributors>
 
   <properties>
-    <revision>1.26</revision>
+    <revision>1.27</revision>
     <changelist>-SNAPSHOT</changelist>
     <jenkins.version>2.289.3</jenkins.version>
     <gitHubRepo>jenkinsci/${project.artifactId}-plugin</gitHubRepo>
@@ -118,7 +118,7 @@
     <connection>scm:git:https://github.com/${gitHubRepo}.git</connection>
     <developerConnection>scm:git:git@github.com:${gitHubRepo}.git</developerConnection>
     <url>https://github.com/${gitHubRepo}</url>
-    <tag>sloccount-1.26</tag>
+    <tag>${scmTag}</tag>
   </scm>
 
 </project>
